# goozarapSessions

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  project-specifics.md  rust-toolchain.toml
.claude/: launch.json
.github/workflows/: ci.yml
apps/gooz-studio/: Cargo.toml
apps/gooz-studio/src/: beat.rs  lib.rs  main.rs  pipeline.rs  view.rs
apps/gooz-studio/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/gooz-studio/src-tauri/capabilities/: default.json
apps/gooz-studio/src-tauri/src/: main.rs
apps/gooz-studio/tests/: acceptance_r0008.rs  acceptance_r0009.rs  shell_record_mock.rs
apps/gooz-studio/ui/: fixture.js  index.html  main.js  style.css
crates/gooz-audio/: Cargo.toml
crates/gooz-audio/examples/: metronome.rs  record_playback.rs
crates/gooz-audio/src/: backend.rs  cpal_backend.rs  engine.rs  error.rs  lib.rs  metronome.rs  ring.rs  take.rs  transport.rs
crates/gooz-audio/tests/: acceptance_r0003.rs  acceptance_r0004.rs
crates/gooz-dsp/: Cargo.toml
crates/gooz-dsp/src/: error.rs  lib.rs  onset.rs  quantize.rs  transcribe.rs  yin.rs
crates/gooz-dsp/tests/: acceptance_r0005.rs  acceptance_r0006.rs
crates/gooz-lyrics/: Cargo.toml
crates/gooz-lyrics/src/: lib.rs
crates/gooz-model/: Cargo.toml
crates/gooz-model/src/: error.rs  features.rs  lib.rs  registry.rs  timbre.rs
crates/gooz-model/tests/: acceptance_r0014.rs  acceptance_r0015.rs  acceptance_r0016.rs
crates/gooz-ratio/: Cargo.toml
crates/gooz-ratio/src/: beat.rs  beat_error.rs  error.rs  grid.rs  lib.rs  math.rs  ratio.rs  rhythm.rs
crates/gooz-ratio/tests/: acceptance_r0001.rs  acceptance_r0002.rs
crates/gooz-session/: Cargo.toml
crates/gooz-session/src/: arrangement.rs  error.rs  export.rs  lib.rs  model.rs
crates/gooz-session/tests/: acceptance_r0010.rs  acceptance_r0011.rs  acceptance_r0012.rs
crates/gooz-synth/: Cargo.toml
crates/gooz-synth/src/: beat.rs  distortion.rs  drums.rs  lib.rs  render.rs  string.rs
crates/gooz-synth/tests/: acceptance_r0007.rs  acceptance_r0009.rs
docs/: ARCHITECTURE.md  agents.md  ai-music-direction.md  research-directions.md
requirements/: 0001-frequency-ratio-core.md  0002-beat-ratio-core.md  0003-audio-engine.md  0004-ratio-locked-transport.md  0005-pitch-onset.md  0006-snap-to-grid.md  0007-instrument-render.md  0008-hum-to-riff.md  0009-beat-builder.md  0010-session-format.md  0011-arrangement.md  0012-mixdown-export.md  0013-studio-shell.md  0014-model-registry.md  0015-feature-extraction.md  0016-timbre-training.md
specs/: 0001-frequency-ratio-core.md  0002-beat-ratio-core.md  0003-audio-engine.md  0004-ratio-locked-transport.md  0005-pitch-onset.md  0006-snap-to-grid.md  0007-instrument-render.md  0008-hum-to-riff.md  0009-beat-builder.md  0010-session-format.md  0011-arrangement.md  0012-mixdown-export.md  0013-studio-shell.md  0014-model-registry.md  0015-feature-extraction.md  0016-timbre-training.md
