[workspace]
resolver = "2"
members = [
    "crates/gooz-ratio",
    "crates/gooz-dsp",
    "crates/gooz-audio",
    "crates/gooz-synth",
    "crates/gooz-session",
    "crates/gooz-model",
    "crates/gooz-lyrics",
    "apps/gooz-studio",
]
# The Tauri desktop shell (R-0013) pulls the heavy webview runtime; it is built
# with `cargo tauri` on a desktop, not by the workspace merge gate.
exclude = ["apps/gooz-studio/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/westerngazoo/goozarapSessions"
license = "MIT"

[workspace.dependencies]
gooz-ratio = { path = "crates/gooz-ratio" }
gooz-dsp = { path = "crates/gooz-dsp" }
gooz-audio = { path = "crates/gooz-audio" }
gooz-synth = { path = "crates/gooz-synth" }
gooz-session = { path = "crates/gooz-session" }
gooz-model = { path = "crates/gooz-model" }
gooz-lyrics = { path = "crates/gooz-lyrics" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
