[package]
name = "gooz-studio"
description = "The goozarapSessions desktop studio — Tauri shell, Easy Mode UI"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "gooz-studio"
path = "src/main.rs"

[[bin]]
name = "beat"
path = "src/bin/beat.rs"

[dependencies]
gooz-dsp.workspace = true
gooz-audio.workspace = true
gooz-synth.workspace = true
gooz-ratio.workspace = true
