[package]
name = "gooz-studio"
description = "The goozarapSessions desktop studio — Tauri shell, Easy Mode UI"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
gooz-dsp.workspace = true
gooz-audio.workspace = true
gooz-synth.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
