[package]
name = "gooz-model"
description = "Local ML: per-song/per-album influence models — feature extraction, on-device training of small adapters, inference (candle)"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
gooz-dsp.workspace = true
gooz-ratio.workspace = true
