[package]
name = "gooz-session"
description = "Project model: song sessions, stems, takes, arrangement, serialization, WAV/stem export"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
hound.workspace = true
